--- a/annotation/style.css
+++ b/annotation/style.css
@@ -1,10 +1,22 @@
 h1 {
 	font-family: "Comic Sans MS";
-	font-size: 40px;
+	font-size: 60px;
+	text-align: center;
 }
 
 body {
-	font-family: "Helvetica";
-	font-size: 14px;
 	background-color: purple;
+}
+
+#failvideo {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
+#lyrics {
+	font-family: "Helvetica";
+	font-size: 30px;
+	text-align: center;
+	font-weight: bold;
 }
