--- a/notuber/style.css
+++ b/notuber/style.css
@@ -1,4 +1,11 @@
-title {
-	font-size: 50px;
+#title {
+	font-size: 40px;
 	font-family: "Helvetica";
+	text-align: center;
+}
+
+#map {
+	height: 700px;
+	width: 900px;
+	margin: 0 auto;
 }
