--- a/notuber/style.css
+++ b/notuber/style.css
@@ -1,11 +1,22 @@
+body {
+	background-color: #db6918;
+}
+
 #title {
-	font-size: 40px;
+	font-size: 50px;
 	font-family: "Helvetica";
+	color: white;
+	text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 	text-align: center;
 }
 
 #map {
-	height: 700px;
-	width: 900px;
+	height: 670px;
+	width: 1000px;
 	margin: 0 auto;
 }
+
