--- a/notuber/uber_style.css
+++ b/notuber/uber_style.css
@@ -1,5 +1,7 @@
-body {
+body, html {
 	background-color: #db6918;
+	width: 100%;
+	height: 100%;
 }
 
 #title {
@@ -15,8 +17,8 @@ body {
 }
 
 #map {
-	height: 650px;
-	width: 850px;
+	height: 80%;
+	width: 100%;
 	margin: 0 auto;
 }
 
